[feat] Link Component 추가 [feat] index.js Button, Link Component 적용 [style] Button Component css 적용 [style] Link Component css 적용

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,7 @@
 {
 	"welcome": "Welcome to KoLiving",
 	"email": "Email",
-	"password": "Password"
+	"password": "Password",
+	"signup": "Sign up now!",
+	"resetPwd" : "Reset password"
 }
