--- a/public/locales/en/signup.json
+++ b/public/locales/en/signup.json
@@ -1,3 +1,8 @@
 {
-  "createAccount": "Create Account"
+  "createAccount": "Create Account",
+  "emailPlaceholder": "Your email",
+  "acceptAll": "Accept all",
+  "14over": "I'm 14 or over",
+  "termsAndCondition": "Terms and Conditions",
+  "privacyPolicies": "Privacy Policies"
 }
