--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -5,5 +5,6 @@
   "signup": "Sign up now!",
   "resetPwd": "Reset password",
   "validEmail": "Please provide a valid email",
-  "validPassword": "Invalid email or password"
+  "validPassword": "Invalid email or password",
+  "next": "Next"
 }
