--- a/public/locales/en/signup.json
+++ b/public/locales/en/signup.json
@@ -4,5 +4,9 @@
   "acceptAll": "Accept all",
   "14over": "I'm 14 or over",
   "termsAndCondition": "Terms and Conditions",
-  "privacyPolicies": "Privacy Policies"
+  "privacyPolicies": "Privacy Policies",
+  "checkMember": "Are you already a member?",
+  "view": "View",
+  "login": "Log In",
+  "signup": "Sign up"
 }
