[feat] ResetPassword step2 추가

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,5 +6,6 @@
   "resetPwd": "Reset password",
   "validEmail": "Please provide a valid email",
   "validPassword": "Invalid email or password",
+  "samePassword" : "Please check again",
   "next": "Next"
 }
