[feat] step3 완... 디테일 놓친부분이 있지만 차차 하도록 하자

--- a/public/locales/en/signup.json
+++ b/public/locales/en/signup.json
@@ -26,5 +26,8 @@
   "month": "Month",
   "day": "Day",
   "year": "Year",
-  "introduce": "Introduce yourself to others!"
+  "introduce": "Introduce yourself to others!",
+  "congratulation": "Congratulation!",
+  "welcome": "You are all set to start finding your room!",
+  "startToExplore": "Start to Explore"
 }
