[feat] Filter Page Modal 형태로 변경

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -8,5 +8,6 @@
   "validPassword": "Invalid email or password",
   "samePassword": "Please check again",
   "next": "Next",
-  "complete": "Complete"
+  "complete": "Complete",
+  "filters" : "Filters"
 }
