--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -9,5 +9,6 @@
   "samePassword": "Please check again",
   "next": "Next",
   "complete": "Complete",
-  "filters" : "Filters"
+  "filters" : "Filters",
+  "uptofive" : "You can select up to five"
 }
