[fix] Component 크기 조절

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -10,5 +10,6 @@
   "next": "Next",
   "complete": "Complete",
   "filters" : "Filters",
-  "uptofive" : "You can select up to five"
+  "uptofive" : "You can select up to five",
+  "viewRooms": "View rooms without deposit"
 }
