--- a/public/locales/ko/filter.json
+++ b/public/locales/ko/filter.json
@@ -4,7 +4,7 @@
   "koo": "Gu",
   "dong": "Dong",
   "deposit": "Deposit",
-  "viewRoomsWithoutDeposit": "View rooms without deposit",
+  "viewRooms": "View rooms without deposit",
   "minMax": "Min 0 ￦ - Max 500,000,000 ￦ ",
   "min": "Min",
   "max": "Max",
